# operation_research

./: .env  .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  assign_warehouses.ipynb  classroom_schedule.ipynb  docker-compose-dev.yml  docker-compose.yml  extract_subset.ipynb  hello.py  leetcode.ipynb  planning_lp.ipynb  pyproject.toml  requirements.txt  supply_chain.ipynb  task_assignment.ipynb  warehousing_allocation.ipynb
config/: airflow.cfg
dags/: dags.py
dags/src/: dashboarcreator.py  dataloaders.py  experiments.ipynb  forecasters.py  forecasttools.py  fullfilment.py  pipeline.py  plots.py  queries.py
data/: classroom.txt  conflicting_events.txt  warehouse_costs.txt
data/favorita_dataset/output/: dates_train.parquet  dates_valid.parquet  train_dates.parquet  train_target.parquet  x_valid.parquet  y_train.parquet  y_valid.parquet
data/favorita_dataset/snapshots/: train_snapshot.parquet
data/favorita_dataset/subset/: events.parquet  eventstores.parquet  procurements.parquet  products.parquet  promotions.parquet  sales.parquet  sales_all.parquet  sales_future.parquet  sales_valid.parquet  stocks.parquet  stores.parquet  transportlinks.parquet  workshops.parquet
notebooks/: classroom_schedule.ipynb  graph_coloring.ipynb  planning_lp.ipynb  task_assignment.ipynb  vrp_single_path.ipynb  warehousing_allocation.ipynb
pages/: 1_Demand_Overview.py  1_Procurement_Overview.py  2_Demand_Overview.py  2_Procurement_Overview.py
postgres-init/: init-dbs.sql
services/dashboard/: Dockerfile  main.py  pyproject.toml
services/dbcore/: Dockerfile  api_test.ipynb  dbconfig.py  hello.py  main.py  minio.ipynb  pyproject.toml  schema.py
services/demand_fulfillment/: fulfillment.ipynb  fulfillment.py  main.py  pyproject.toml  queries.py  supply_chain.ipynb
services/demand_prediction/: predict.ipynb  predict.py  pyproject.toml
services/feature_pipeline/: data_pipeline.py  data_snapshot.py  extract_subset.ipynb  feature_engineering.ipynb  hello.py  pyproject.toml  read_data.ipynb  snapshot.py
services/model_fit/: fit.ipynb  fit.py  pyproject.toml  test.py
services/model_fit/.ipynb_checkpoints/: fit-checkpoint.ipynb
services/shared/: __init__.py  dataprocess.py  dboperators.py  forecasters.py  s3config.py
