[project]
name = "operation-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb~=1.3",
    "gurobipy~=12.0",
    "metaflow>=2.16.5",
    "numpy~=1.24",
    "ortools~=9.13",
    "plotly~=5.24",
    "polars~=1.0",
    "streamlit~=1.41",
]

[dependency-groups]
dev = [
    "ipykernel==6.29.5",
    "nbformat==5.10.4",
    "ruff>=0.12.4",
]
