[project]
name = "operation-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "airflow-provider-mlflow>=1.1.0",
    "apache-airflow-providers-amazon>=9.10.0",
    "astro-sdk-python>=1.8.1",
    "boto3>=1.39.11",
    "connectorx>=0.4.3",
    "hyperopt>=0.2.7",
    "lightgbm[arrow]>=4.6.0",
    "mlflow-skinny>=3.1.4",
    "numpy~=1.24",
    "ortools~=9.13",
    "polars==1.31.*",
    "psycopg2-binary>=2.9.10",
    "s3fs>=0.4.2",
    "plotly>=5.24.1",
]

[dependency-groups]
dev = [
    "duckdb>=1.3.0",
    "ipykernel==6.29.5",
    "nbformat==5.10.4",
    "ruff>=0.12.4",
    "streamlit>=1.45.1",
]
