[project]
name = "dbcore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.39.*",
    "duckdb==1.3.*",
    "duckdb-engine==0.17.*",
    "fastapi[standard]==0.116.*",
    "polars==1.31.*",
    "pyarrow>=20.0.0",
    "sqlmodel==0.0.*",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
