[project]
name = "demand-fulfillment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "connectorx>=0.4.3",
    "ortools>=9.14.6206",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "s3fs>=2025.7.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
]
