[project]
name = "model_fit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.2.1",
    "lightgbm[arrow]==4.6.*",
    "pandas>=2.3.1",
    "polars==1.31.*",
    "scikit-learn==1.7.*",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "nbformat>=5.10.4",
    "plotly>=6.2.0",
]
