[project]
name = "feature-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3==1.39.*",
    "click>=8.2.1",
    "connectorx==0.4.*",
    "dotenv>=0.9.9",
    "polars>=1.31.0",
    "pyarrow==20.0.*",
]

[dependency-groups]
dev = [
    "duckdb>=1.3.2",
    "pyarrow==20.0.*",
]

[tool.setuptools.packages.find]
where = ["services"]

[tool.setuptools.package-dir]
"" = "services"